Fixed dropdown menu size & secondary button border
Dropdown menu size width-limited to not overlap. Secondary button
in white backround and round box

--- a/main.css
+++ b/main.css
@@ -55,6 +55,7 @@ body {
     background-color: #273746;
     position: absolute;
     width: 40vw;
+	max-width: 100px;
     right: 0;
     z-index: 1;
     box-shadow: 0px 6px 8px 0px rgba(0,0,0,0.2);
@@ -136,6 +137,9 @@ body {
     outline: 0;
     font-weight: bold;
     max-width: 20%;
+	background-color: white;
+	border-radius: 25px;
+	padding: 2px;
 }
 
 
